--- a/docs/src/styles/global.critical.css
+++ b/docs/src/styles/global.critical.css
@@ -1,44 +1,50 @@
 /* jetbrains-mono-300 - latin */
 @font-face {
-  font-family: "JetBrains Mono";
+  font-family: 'JetBrains Mono';
   font-style: normal;
   font-weight: 300;
-  src: local(""), url("fonts/jetbrains-mono-v6-latin-300.woff2") format("woff2");
+  src:
+    local(''),
+    url('fonts/jetbrains-mono-v6-latin-300.woff2') format('woff2');
   font-display: swap;
 }
 
 /* jetbrains-mono-700 - latin */
 @font-face {
-  font-family: "JetBrains Mono";
+  font-family: 'JetBrains Mono';
   font-style: normal;
   font-weight: 700;
-  src: local(""), url("fonts/jetbrains-mono-v6-latin-700.woff2") format("woff2");
+  src:
+    local(''),
+    url('fonts/jetbrains-mono-v6-latin-700.woff2') format('woff2');
   font-display: swap;
 }
 
 /* jetbrains-mono-300italic - latin */
 @font-face {
-  font-family: "JetBrains Mono";
+  font-family: 'JetBrains Mono';
   font-style: italic;
   font-weight: 300;
-  src: local(""),
-    url("fonts/jetbrains-mono-v6-latin-300italic.woff2") format("woff2");
+  src:
+    local(''),
+    url('fonts/jetbrains-mono-v6-latin-300italic.woff2') format('woff2');
   font-display: swap;
 }
 
 /* jetbrains-mono-700italic - latin */
 @font-face {
-  font-family: "JetBrains Mono";
+  font-family: 'JetBrains Mono';
   font-style: italic;
   font-weight: 700;
-  src: local(""),
-    url("fonts/jetbrains-mono-v6-latin-700italic.woff2") format("woff2");
+  src:
+    local(''),
+    url('fonts/jetbrains-mono-v6-latin-700italic.woff2') format('woff2');
   font-display: swap;
 }
 
 body {
-  font-family: "JetBrains Mono", ui-monospace, SFMono-Regular, Menlo, Monaco,
-    Consolas, "Liberation Mono", "Courier New", monospace;
+  font-family: 'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Monaco,
+    Consolas, 'Liberation Mono', 'Courier New', monospace;
 
   --light: rgb(244 244 245); /* tw text-zinc-100 */
   --dark: rgb(24 24 27); /* tw bg-zinc-900 */
