--- a/packages/create-hwy/__common/styles/nprogress.bundle.css
+++ b/packages/create-hwy/__common/styles/nprogress.bundle.css
@@ -22,7 +22,9 @@
   right: 0px;
   width: 100px;
   height: 100%;
-  box-shadow: 0 0 10px orange, 0 0 5px orange;
+  box-shadow:
+    0 0 10px orange,
+    0 0 5px orange;
   opacity: 1;
 
   -webkit-transform: rotate(3deg) translate(0px, -4px);
