--- a/docs/src/styles/2-global.bundle.css
+++ b/docs/src/styles/2-global.bundle.css
@@ -212,7 +212,6 @@ footer {
   line-height: 1.75;
 }
 
-body {
-  background: indigo;
-  padding: 3rem;
-}
+/* body {
+  background: blueviolet;
+} */
