--- a/docs/src/styles/normal/main.css
+++ b/docs/src/styles/normal/main.css
@@ -1,116 +1,173 @@
 *,
 *::before,
 *::after {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 :root {
-	--fg: #111;
-	--bg: #eee;
-	--mono-font-stack: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console,
-		monospace;
-	--sans-font-stack: -apple-system, BlinkMacSystemFont, avenir next, avenir,
-		segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial,
-		sans-serif;
-	--serif-font-stack: Iowan Old Style, Apple Garamond, Baskerville,
-		Times New Roman, Droid Serif, Times, Source Serif Pro, serif,
-		Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+  --fg: #111;
+  --bg: #eee;
+  --mono-font-stack: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console,
+    monospace;
+  --sans-font-stack: -apple-system, BlinkMacSystemFont, avenir next, avenir,
+    segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial,
+    sans-serif;
+  --serif-font-stack: Iowan Old Style, Apple Garamond, Baskerville,
+    Times New Roman, Droid Serif, Times, Source Serif Pro, serif,
+    Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+  --topnav-height: 3rem;
+  --sidebar-width: 200px;
+  --sidebar-height: calc(100dvh - var(--topnav-height) - 1px);
+  --std-border: 1px solid #777;
 }
 
 @media screen and (prefers-color-scheme: dark) {
-	:root {
-		--fg: #eee;
-		--bg: #111;
-	}
+  :root {
+    --fg: #eee;
+    --bg: #111;
+  }
 }
 
 html {
-	color: var(--fg);
-	background-color: var(--bg);
-	font-family: var(--sans-font-stack);
+  color: var(--fg);
+  background-color: var(--bg);
+  font-family: var(--sans-font-stack);
 }
 
 body {
-	margin: 0;
-	overflow-x: hidden;
+  margin: 0;
+  overflow-x: hidden;
 }
 
 pre {
-	overflow-x: auto;
-	background-color: #7772;
-	padding: 0.75rem;
-	border: 1px solid #777;
+  overflow-x: auto;
+  background-color: #7772;
+  padding: 0.75rem;
+  border: var(--std-border);
 }
 
 code {
-	font-family: var(--mono-font-stack);
-	font-size: 90%;
-	background-color: #7773;
-	padding: 0.15rem 0.25rem;
-	tab-size: 1.75rem;
-	line-height: 1.5;
+  font-family: var(--mono-font-stack);
+  font-size: 90%;
+  background-color: #7773;
+  padding: 0.15rem 0.25rem;
+  tab-size: 1.75rem;
+  line-height: 1.5;
 }
 
 pre code {
-	background-color: transparent;
-	padding: 0;
+  background-color: transparent;
+  padding: 0;
 }
 
-body > nav {
-	position: fixed;
-	top: 0;
-	left: 0;
-	height: 100dvh;
-	max-height: 100dvh;
-	overflow-y: auto;
-	width: 150px;
-	min-width: 150px;
-	max-width: 150px;
-	background: #272727;
-	color: white;
-	a {
-		color: white;
-	}
+#root > nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100dvh;
+  max-height: 100dvh;
+  overflow-y: auto;
+  width: var(--sidebar-width);
+  min-width: var(--sidebar-width);
+  max-width: var(--sidebar-width);
+  border-right: var(--std-border);
 }
 
-body > nav > ul {
-	list-style: none;
-	padding: 1rem;
-	margin: 0;
-	display: flex;
-	flex-direction: column;
-	gap: 0.5rem;
+@media screen and (max-width: 800px) {
+  #root > nav {
+    position: sticky;
+    top: 0;
+    background: black;
+    height: unset;
+    max-height: unset;
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
+    border-right: none;
+  }
 }
 
-body > main {
-	margin-left: 150px;
-	padding: 1rem 2rem 1.5rem;
+#root > nav > ul {
+  list-style: none;
+  padding: 1rem;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  background: #272727;
+  color: white;
+  a {
+    color: white;
+  }
+  height: var(--sidebar-height);
+  min-height: var(--sidebar-height);
+  max-height: var(--sidebar-height);
+  border-top: var(--std-border);
+}
+
+#root > main {
+  margin-left: var(--sidebar-width);
+  padding: 1rem 2rem 1.5rem;
+}
+
+@media screen and (max-width: 800px) {
+  #root > main {
+    margin-left: 0;
+  }
+  #root > nav > ul {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    overflow-y: auto;
+    width: var(--sidebar-width);
+    min-width: var(--sidebar-width);
+    max-width: var(--sidebar-width);
+    border-top: none;
+    border-left: var(--std-border);
+  }
+  /* not data-open on nav, hide ul */
+  #root > nav:not([data-open]) > ul {
+    display: none;
+  }
 }
 
 a {
-	color: var(--fg);
-	text-underline-offset: 4px;
-	text-decoration-thickness: 2px;
-	text-decoration-color: #777;
+  color: var(--fg);
+  text-underline-offset: 4px;
+  text-decoration-thickness: 2px;
+  text-decoration-color: #777;
+}
+
+.logo-wrapper {
+  display: flex;
+  justify-content: space-between;
 }
 
 #logo h1 {
-	font-family: var(--mono-font-stack);
-	font-size: 1rem;
-	margin: 0;
+  font-family: var(--mono-font-stack);
+  font-size: 1rem;
+  margin: 0;
 }
 
 #logo {
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	background: black;
-	padding: 1rem;
-	text-decoration: none;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: black;
+  text-decoration: none;
+  height: var(--topnav-height);
+}
+@media screen and (max-width: 800px) {
+  #logo {
+    width: unset;
+    padding: 0 1.25rem;
+    border-right: var(--std-border);
+  }
 }
 
 a:has(#site-h1:hover) {
-	text-decoration-color: black;
+  text-decoration-color: black;
 }
 
 h1,
@@ -119,9 +176,41 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: var(--serif-font-stack);
+  font-family: var(--serif-font-stack);
 }
 
 p {
-	line-height: 1.5;
+  line-height: 1.5;
+}
+
+.mobile-only {
+  display: none !important;
+}
+@media screen and (max-width: 800px) {
+  .mobile-only {
+    display: unset !important;
+  }
+  .desktop-only {
+    display: none !important;
+  }
+  nav {
+    border-bottom: var(--std-border);
+  }
+}
+
+.menu-icon {
+  background: none;
+  display: flex;
+  outline: none;
+  border: none;
+  width: var(--topnav-height);
+  height: var(--topnav-height);
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  background: black;
+  color: white;
+  padding: 0;
+  margin: 0;
+  border-left: var(--std-border);
 }
