--- a/docs/src/styles/normal/main.css
+++ b/docs/src/styles/normal/main.css
@@ -87,7 +87,7 @@ pre code {
   }
 }
 
-#root > nav > ul {
+#sidebar {
   list-style: none;
   padding: 1rem;
   margin: 0;
@@ -106,15 +106,18 @@ pre code {
 }
 
 #root > main {
-  margin-left: var(--sidebar-width);
-  padding: 1rem 2rem 1.5rem;
+  margin: 0 auto;
+  padding: 1rem;
+  padding-right: 2rem;
+  padding-left: calc(var(--sidebar-width) + 2rem);
+  max-width: 1280px;
 }
 
 @media screen and (max-width: 800px) {
   #root > main {
-    margin-left: 0;
+    padding: 1rem 1.5rem 1.5rem;
   }
-  #root > nav > ul {
+  #sidebar {
     position: fixed;
     bottom: 0;
     right: 0;
@@ -124,10 +127,6 @@ pre code {
     max-width: var(--sidebar-width);
     border-top: none;
     border-left: var(--std-border);
-  }
-  /* not data-open on nav, hide ul */
-  #root > nav:not([data-open]) > ul {
-    display: none;
   }
 }
 
@@ -155,6 +154,7 @@ a {
   justify-content: center;
   align-items: center;
   background: black;
+  color: white;
   text-decoration: none;
   height: var(--topnav-height);
 }
@@ -207,10 +207,25 @@ p {
   height: var(--topnav-height);
   justify-content: center;
   align-items: center;
-  cursor: pointer;
   background: black;
   color: white;
   padding: 0;
   margin: 0;
   border-left: var(--std-border);
+}
+
+.menu-icon:hover {
+  background: #171717;
+}
+
+.unmounted {
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.mounted {
+  opacity: 1;
+  pointer-events: unset;
+  transition: opacity 0.2s ease-in-out;
 }
